Updating JEP references